modified index.html content

--- a/html/dev_prachesta/templates/index.html
+++ b/html/dev_prachesta/templates/index.html
@@ -194,14 +194,19 @@
 
         <div class="row natur-row no-margin w-100">
             <div class="text-part col-md-6">
-                <h2>About Our Charity</h2>
-                <p>Prachesta Foundation plants saplings and supports them to become trees.
-                    At Prachesta Foundation we have been creating urban and rural forests ,
-                    support farmers with fruit trees, rejuvenate lakes and water bodies and install solar lamps
-                    in villages.</p>
-                <p> Prachesta Foundation does all this with support from individuals and corporates
-                    which wish to bring change to the society under their CSR (Corporate Social Responsibility) initiatives. Prachesta Foundation is an NGO
-                    in India registered under ssection 12A and 80G of Income Tax.  </p>
+                <h2>Welcome to Prachesta</h2>
+                <p>A nonprofit organization dedicated to making a positive impact 
+                    in the lives of those in need. With a passion for change and compassion at our core,
+                     we strive to address pressing social issues and create a better world for all. 
+                     Through our collaborative efforts and generous support, we work tirelessly to 
+                     provide essential resources, empower communities, and promote sustainable development. 
+                     Our programs encompass areas such as education, healthcare, poverty alleviation, 
+                     and environmental conservation. </p>
+                <p> With the help of our dedicated volunteers and donors, 
+                    we have successfully touched the lives of countless individuals and families, offering 
+                    them hope and a chance for a brighter future. Join us today in our mission to transform lives, 
+                    uplift communities, and foster lasting change. Together, we can make a difference and build a 
+                    more equitable and compassionate society. </p>
 
             </div>
             <div class="image-part col-md-6">
@@ -215,7 +220,7 @@
                      <div class="col-md-6">
                         <div class="about-qcard ">
                            <i class="fas fa-search-dollar red"></i>
-                            <p>Quick Fundrais</p>
+                            <p>Quick Fundraise</p>
                         </div>
                     </div>
                      <div class="col-md-6">
@@ -245,9 +250,12 @@
           <div class="row mission">
               <div class="col-md-6 mv-det">
                   <h1>Our Mission</h1>
-                  <p>Prachesta Foundation, a non-profit organization in india is to empower underprivileged
-                    children, youth and women through relevant education,healthcare. At Prachesta we are focucsed to
-                    create urban and rural forests and help farmers in innovative technology and methodology.</p>
+                  <p>
+                    Our mission at Prachesta is to empower individuals and communities by addressing their most pressing needs and creating sustainable solutions.
+                     We strive to foster positive social change and improve the lives of those facing adversity. Through our dedicated efforts, we aim to provide access to education,
+                      healthcare, and essential resources, while promoting equality, justice, and human rights. We believe in the power of compassion, collaboration, and innovation 
+                      to create lasting impact. Our mission is to inspire hope, ignite potential, and transform lives, one person at a time.
+                     Together, with the support of our donors, volunteers, and partners, we are committed to building a more inclusive and equitable world for all</p>
               </div>
               <div class="col-md-6 mv-img">
                   <img src="/static/images/misin.jpg" alt="">
@@ -259,13 +267,12 @@
               </div>
               <div class="col-md-6 mv-det">
                    <h1>Our Vision</h1>
-                   <p>To educate and empower underprivileged children and support them till they are
-                        gainfully employed. To do our best so that the current generation of
-                        underprivileged children living below the poverty line integrate seamlessly
-                        into mainstream society.  To impart quality education, and all-round development,
-                        including skill  building, in order to provide avenues for employment
-                        that are suited to every child’s dominant intelligence and strengths. To help every needy who needs medical facility.
-                        To stop the climate change and bringing back the greenery to our lives.</p>
+                   <p>At Prachesta, our vision is to envision a world where every individual, regardless of their circumstances, 
+                    has the opportunity to thrive and lead a fulfilling life. We strive to create a society where compassion, kindness, and generosity prevail, 
+                    and where the most vulnerable members are supported and empowered. Through our nonprofit organization, we aspire to be a catalyst for positive change, 
+                    addressing critical social issues and providing vital resources and support to those in need. By fostering collaboration, innovation, and community engagement,
+                     we envision a future where our collective efforts create lasting impact, 
+                    inspire hope, and transform lives. Together, we can create a more equitable and compassionate world for generations to come.</p>
               </div>
           </div>
       </div>
@@ -284,28 +291,30 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="event-box">
                         <img src="/static/images/events/image_08.jpg" alt="">
-                        <h4>Child Education in Africa</h4>
+                        <h4>Train accident victims in Odisha</h4>
                         
-                        <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                        <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's </p>
+                        <p class="raises"><span>Raised : ₹34,425</span> / ₹5,00,000 </p>
+                        <p class="desic">Helpng victims of train accident on 2nd June in Odisha for eductaion. </p>
                         <button class="btn btn-success btn-sm">Donate Now</button>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="event-box">
                         <img src="/static/images/events/image_06.jpg" alt="">
-                        <h4>Child Education in Africa</h4>
-                        <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                        <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's </p>
+                        <h4>Child eductaion for orphans </h4>
+                        <p class="raises"><span>Raised : ₹52,600</span> / ₹5,00,000 </p>
+                        <p class="desic">Empowering orphaned children through education, giving them the tools and opportunities to break the cycle of poverty and build a brighter future.
+                            Our orphan education charity is dedicated to providing quality education, nurturing growth, and instilling hope in the lives of orphaned children, ensuring they have equal chances to succeed. </p>
                         <button class="btn btn-success btn-sm">Donate Now</button>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="event-box">
                         <img src="/static/images/events/image_04.jpg" alt="">
-                        <h4>Child Education in Africa</h4>
-                        <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                        <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's </p>
+                        <h4>100000 plants by 2023 DEC</h4>
+                        <p class="raises"><span>Raised : ₹34,425</span> / ₹500,000 </p>
+                        <p class="desic">Our plantation charity is committed to restoring and preserving the environment by planting trees and promoting sustainable practices.
+                            Through our efforts, we aim to create a greener and healthier planet, mitigating the effects of deforestation and climate change for the benefit of current and future generations. </p>
                         <button class="btn btn-success btn-sm">Donate Now</button>
                     </div>
                 </div>
@@ -329,11 +338,11 @@ But you can read the following facts in order to make sure of all pluses of our 
                </div>
                 <div class="row">
                     <div class="col-sm-3 numb">
-                        <h3>12+</h3>
+                        <h3>5+</h3>
                         <span>YEARS OF EXPEREANCE</span>
                     </div>
                     <div class="col-sm-3 numb">
-                        <h3>1812+</h3>
+                        <h3>135+</h3>
                         <span>HAPPY CHILDRENS</span>
                     </div>
                     <div class="col-sm-3 numb">
@@ -365,7 +374,7 @@ But you can read the following facts in order to make sure of all pluses of our 
                             <img src="/static/images/team/gagarin.jpg" alt="">
                             <div class="det-o">
                                 <h4>Gagarin Das</h4>
-                                <i>Co Founder </i>
+                                <i>Trustee</i>
                             </div>
                         </div>-->
                     </div>
@@ -375,7 +384,7 @@ But you can read the following facts in order to make sure of all pluses of our 
                             <img src="/static/images/team/gagarin.jpg" alt="">
                             <div class="det-o">
                                 <h4>Gagarin Das</h4>
-                                <i>Co Founder</i>
+                                <i>Trustee</i>
                             </div>
                         </div>
                     </div>
@@ -385,7 +394,7 @@ But you can read the following facts in order to make sure of all pluses of our 
                             <img src="/static/images/team/team-memb2.jpg" alt="">
                             <div class="det-o">
                                 <h4>Nihar Swain</h4>
-                                <i>CFO</i>
+                                <i>Trustee</i>
                             </div>
                         </div>
                     </div>
@@ -423,8 +432,8 @@ But you can read the following facts in order to make sure of all pluses of our 
         						<img src="/static/images/events/image_01.jpg" alt="">
         					</figure>
         					<div class="blog-detail">
-        						<small>By Admin | August 10 2018</small>
-								<h4>Methods of Recuirtments</h4>
+        						<small>By Admin | August 10 2021</small>
+								<h4>This section needs to be removed</h4>
 								<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam justo neque, aliquet sit amet elementum vel, vehicula eget eros. Vivamus arcu metus, mattis sed sagittis at, sagittis quis neque. Praesent.</p>
 								<div class="link">
 									<a href="">Read more </a><i class="fas fa-long-arrow-alt-right"></i>
@@ -499,10 +508,7 @@ But you can read the following facts in order to make sure of all pluses of our 
                     <h2>Contact Us</h2>
                     <address class="md-margin-bottom-40">
                         Prachesta Foundation <br>
-                        G201, CEDAR, B.M. Magnolia Park <br>
-                        Immadihalli main road, Nagondanahalli <br>
                         Whitefield, Bangalore, KA, IND, 560066<br>
-                        Phone: +91 7022964222 <br>
                         Email: <a href="mailto:info@prachestafoundation.com" class="">info@prachestafoundation.com</a><br>
                         Web: <a href="www.prachestafoundation.com" class="">www.prachestafoundation.com</a>
                     </address>
